kustomize/thomflix/overlays/thomelab/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  annotations:
    tailscale.com/tags: "tag:k8s,tag:thomflix"
spec:
  defaultBackend:
    service:
      name: transmission
      port:
        name: main
  ingressClassName: tailscale
  tls:
    - hosts:
        - thomflix-transmission
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  annotations:
    tailscale.com/tags: "tag:k8s,tag:thomflix"
spec:
  defaultBackend:
    service:
      name: jackett
      port:
        name: main
  ingressClassName: tailscale
  tls:
    - hosts:
        - thomflix-jackett
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    tailscale.com/tags: "tag:k8s,tag:thomflix"
spec:
  defaultBackend:
    service:
      name: sonarr
      port:
        name: main
  ingressClassName: tailscale
  tls:
    - hosts:
        - thomflix-sonarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    tailscale.com/tags: "tag:k8s,tag:thomflix"
spec:
  defaultBackend:
    service:
      name: radarr
      port:
        name: main
  ingressClassName: tailscale
  tls:
    - hosts:
        - thomflix-radarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    tailscale.com/tags: "tag:k8s,tag:thomflix"
spec:
  defaultBackend:
    service:
      name: jellyfin 
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - jellyfin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  annotations:
    tailscale.com/tags: "tag:k8s,tag:thomflix"
spec:
  defaultBackend:
    service:
      name: jellyseerr 
      port:
        name: main
  ingressClassName: tailscale
  tls:
    - hosts:
        - thomflix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  annotations:
    tailscale.com/tags: "tag:k8s,tag:thomflix"
spec:
  defaultBackend:
    service:
      name: homarr
      port:
        name: main
  ingressClassName: tailscale
  tls:
    - hosts:
        - home
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  annotations:
    tailscale.com/tags: "tag:k8s,tag:thomflix"
spec:
  defaultBackend:
    service:
      name: tdarr
      port:
        name: main
  ingressClassName: tailscale
  tls:
    - hosts:
        - thomflix-tdarr
