kustomize/thomflix/overlays/thomelab/tailscale-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thomflix-tailscale
  namespace: thomflix
  annotations:
    tailscale.com/tags: "tag:k8s,tag:thomflix"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: transmission
      port:
        number: 9091
  tls:
    - hosts:
        - thomflix-transmission
---
